2009-08-16  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc, fMatrix.cc, CMatrix.cc, fCMatrix.cc: Add more tests.
	* CMatrix.cc (xgemm): Fix vector * matrix case.
	* fCMatrix.cc (xgemm): Ditto.

2009-08-16  Jaroslav Hajek  <highegg@gmail.com>

	* fMatrix.cc, fCMatrix.cc: Make tests use single precision.

2009-08-16  Jaroslav Hajek  <highegg@gmail.com>

	* CMatrix.cc (xgemm): Fix typo. Add test.
	* fCMatrix.cc (xgemm): Ditto.

2009-07-20  John W. Eaton  <jwe@octave.org>

	* lo-ieee.cc (octave_ieee_init) [__NetBSD__]: Call nan to
	initialize Octave_NaN and nanf, to initialize Octave_Float_NaN.

2009-07-08  John W. Eaton  <jwe@octave.org>

	* dim-vector.h (dim_vector::dim_vector_rep::dim_vector_rep
	(octave_idx_type, const dim_vector_rep *, int)):
	Enforce 2-d objects here.
	(dim_vector::dim_vector_rep::dim_vector_rep): Simply copy object.
	(dim_vector::resize): Allow N < 2.

	2009-07-21  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.2 released.

2009-07-03  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse-op-defs.h (SPARSE_ALL_OP): Fix typo.
	* dSparse.cc (SparseMatrix::prod): Ditto.
	* CSparse.cc (ComplexSparseMatrix::prod): Ditto.

2009-07-02  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse-diag-op-defs.h (inner_do_add_sm_dm): Rewrite to ensure
	ordering of row indices.

2009-06-26  Michael Goffioul  <michael.goffioul@gmail.com>

	* pathsearch.h (class dir_path::static_members): Decorate with
	OCTAVE_API.

2009-06-24  Alexander Barth  <barth.alexander@gmail.com>

	* eigs-base.cc (EigsRealSymmetricMatrix,
	EigsRealSymmetricMatrixShift, EigsRealSymmetricFunc,
	EigsRealNonSymmetricMatrix, EigsRealNonSymmetricMatrixShift,
	EigsRealNonSymmetricFunc, EigsComplexNonSymmetricMatrix,
	EigsComplexNonSymmetricMatrixShift, EigsComplexNonSymmetricFunc):
	Use octave_idx_type for parameters of type LOGICAL in ARPACK.

2009-06-22  Jaroslav Hajek  <highegg@gmail.com>

	* chMatrix.cc (charMatrix::charMatrix (const string_vector&)):
	Optimize w.r.t. COW of std::string.
